# libstrophe

./: .gitignore  .travis.yml  Cargo.toml  MIGRATE-0.10.md  Makefile  README-header.md  README.md  README.tpl  creds-acquire.sh  creds-release.sh  release.toml  rustfmt.toml
.github/workflows/: libstrophe.yml
ci/: 0.13.1-tls-segfault.patch  checks.sh  clippy.sh  install.sh  script.sh
examples/: bot_closure.rs  bot_fn.rs
libstrophe-sys-bindgen/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
libstrophe-sys-bindgen/src/: ffi.rs  lib.rs
src/: alloc_context.rs  connection.rs  context.rs  error.rs  ffi_types.rs  jid.rs  lib.rs  logger.rs  sm_state.rs  stanza.rs  tests.rs  tls_cert.rs
src/connection/: internals.rs
src/examples/: bot_closure.rs  bot_closure_unsafe.rs  bot_fn.rs  bot_fn_safe.rs  mod.rs
src/stanza/: internals.rs
src/tests/: mod.rs
src/tests/fail/: add_short_lived_handler.rs  add_short_lived_handler.stderr  conn_handler_closure_capture_too_short.rs  conn_handler_closure_capture_too_short.stderr  conn_handler_too_short.rs  conn_handler_too_short.stderr  id_handler_closure_capture_too_short.rs  id_handler_closure_capture_too_short.stderr  id_handler_too_short.rs  id_handler_too_short.stderr  logger_closure_capture_too_short.rs  logger_closure_capture_too_short.stderr  logger_too_short.stderr  move_out_stream_error.rs  move_out_stream_error.stderr  stanza_handler_closure_capture_too_short.rs  stanza_handler_closure_capture_too_short.stderr  stanza_handler_too_short.rs  stanza_handler_too_short.stderr  stanza_iterator_borrow.rs  stanza_iterator_borrow.stderr  stanza_iterator_mut_borrow.rs  stanza_iterator_mut_borrow.stderr  stanza_iterator_parent.rs  stanza_iterator_parent.stderr  stanza_too_short.stderr  timed_handler_closure_capture_too_short.rs  timed_handler_closure_capture_too_short.stderr  timed_handler_too_short.rs  timed_handler_too_short.stderr
tests/: tests.rs
tests/fail/: add_short_lived_handler.rs  add_short_lived_handler.stderr  conn_handler_closure_capture_too_short.rs  conn_handler_closure_capture_too_short.stderr  conn_handler_too_short.rs  conn_handler_too_short.stderr  id_handler_closure_capture_too_short.rs  id_handler_closure_capture_too_short.stderr  id_handler_too_short.rs  id_handler_too_short.stderr  logger_closure_capture_too_short.stderr  logger_too_short.rs  move_out_stream_error.rs  move_out_stream_error.stderr  stanza_handler_closure_capture_too_short.stderr  stanza_handler_too_short.rs  stanza_handler_too_short.stderr  stanza_iterator_mut_borrow.stderr  stanza_too_short.rs  stanza_too_short.stderr  timed_handler_closure_capture_too_short.rs  timed_handler_closure_capture_too_short.stderr  timed_handler_too_short.rs  timed_handler_too_short.stderr
