[package]
name = "libstrophe"
version = "0.17.0"
edition = "2018"
description = "Rust ergonomic wrapper for libstrophe"
keywords = ["jabber", "xmpp", "libstrophe", "messaging", "im"]
categories = ["api-bindings", "network-programming"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/libstrophe"
readme = "README.md"
repository = "https://github.com/twistedfall/libstrophe"

[dependencies]
bitflags = "2"
log = { version = "0.4", optional = true }
num-traits = "0.2"
once_cell = "1"
scopeguard = "1"
sys = { package = "libstrophe-sys-bindgen", version = "5" }

[dev-dependencies]
env_logger = "0.10"
matches = "0.1"
trybuild = "1"

[features]
default = ["rust-log", "libstrophe-0_11_0"]
buildtime_bindgen = ["sys/buildtime_bindgen"]
libstrophe-0_9_3 = []
libstrophe-0_10_0 = ["libstrophe-0_9_3"]
libstrophe-0_11_0 = ["libstrophe-0_10_0"]
rust-log = ["log"]
creds-test = []
