[package]
name = "libstrophe"
version = "0.18.0"
edition = "2021"
rust-version = "1.60"
description = "Rust ergonomic wrapper for libstrophe"
keywords = ["jabber", "xmpp", "libstrophe", "messaging", "im"]
categories = ["api-bindings", "network-programming"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/libstrophe"
readme = "README.md"
repository = "https://github.com/twistedfall/libstrophe"

[badges]
maintenance = { status = "passively-maintained" }

[workspace]
members = ["libstrophe-sys-bindgen"]

[dependencies]
bitflags = "2"
log = { version = "0.4", optional = true }
num-traits = "0.2"
once_cell = "1"
scopeguard = "1"
sys = { package = "libstrophe-sys-bindgen", version = "7", path = "libstrophe-sys-bindgen" }

[dev-dependencies]
env_logger = "0.10"
matches = "0.1"
names = "0.14"
trybuild = "1"

[features]
default = ["rust-log", "libstrophe-0_12_0"]
buildtime_bindgen = ["sys/buildtime_bindgen"]
libstrophe-0_9_3 = []
libstrophe-0_10_0 = ["libstrophe-0_9_3"]
libstrophe-0_11_0 = ["libstrophe-0_10_0"]
libstrophe-0_12_0 = ["libstrophe-0_11_0"]
rust-log = ["log"]
