[package]
name = "libstrophe-sys-bindgen"
version = "7.1.0"
edition = "2021"
rust-version = "1.60"
description = "Rust bindings for libstrophe, generated using bindgen"
keywords = ["jabber", "xmpp", "libstrophe", "bindgen", "im"]
categories = ["external-ffi-bindings"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/libstrophe-sys-bindgen"
repository = "https://github.com/twistedfall/libstrophe"
links = "strophe"
exclude = ["/.gitignore", "/tools"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]

[build-dependencies]
bindgen = { version = "0.68", optional = true }

[features]
buildtime_bindgen = ["bindgen"]
